# video

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/migrations/: 20260522_add_events_indexes.sql
backend/scripts/: d6_generate_rewrite_samples.py  eval_generic_real_urls.py  export_ws_schema.py  gen_showcase_case.py  migrate_fixtures_toprador.py
backend/src/agent/: __init__.py  config.py  llm_factory.py  main.py  pool.py  server.py  store.py
backend/src/agent/cascade/: __init__.py  adapter.py  analysis_service.py  anchors.py  canvas_contract.py  circuit_breaker.py  contract.py  cost_cap.py  cost_guard.py  event_names.py  events.py  failures.py  hook_taxonomy.py  minor_audit.py  rewrite.py  rewrite_service.py  showcase_service.py  storage.py  topic_intelligence.py
backend/src/agent/comfyui/: __init__.py  compiler.py  node_registry.py  provider.py  script_gen.py  seed_builder.py
backend/src/agent/prompts/: canvas-manager.md  director.md  doubao_direct_analyze.md  mediakit_viral_analysis_overlay.md  rewrite_baomam_fushi.md  rewrite_generic.md  rewrite_jiating_chufang.md  rewrite_yuer_richang.md
backend/src/agent/tools/: av_post.py  (+6 more)
backend/tests/: test_agent_runner.py  test_agent_runner_real_interrupt.py  test_agent_runner_review_gate.py  test_agent_runner_run.py  test_analysis_service.py  test_anchors.py  test_auth_per_user_invite.py  test_canvas.py  test_canvas_timetravel.py  test_cascade_contract.py  test_cascade_observability.py  test_cascade_tool.py  test_cascade_video_tools.py  test_client_error_endpoint.py  test_clip_extractor.py  test_context_middleware.py  test_cost_calibration.py  test_cost_guard.py  test_creators_endpoint.py  test_data_dir_resolution.py  test_director.py  test_director_prompt_lint.py  test_doubao_direct_client.py  test_douyin_share_resolver.py  test_emit_todos.py  test_eval_harness.py  test_events.py  test_events_endpoint.py  test_events_index.py  test_events_retention.py  test_generation.py  test_google_gen.py  test_health_summary.py  test_hook_taxonomy.py  test_image_provider_default.py  test_llm.py  test_llm_factory.py  test_mediakit_storyline_adapter.py  test_mediakit_storyline_client.py  test_mediakit_viral_overlay.py  (+36 more)
backend/tests/fixtures/: douyin_share_no_play_addr.html  douyin_share_sample.html
(+586 files in other folders)
