[project]
name = "agent"
version = "0.1.0"
description = "OpenRHTV - Agent + Human + Infinite Canvas collaborative video creation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.1",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
