[project]
name = "agent"
version = "0.1.0"
description = "OpenRHTV - Agent + Human + Infinite Canvas collaborative video creation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "boto3>=1.43.9",
    "deepagents>=0.6.1",
    "google-genai>=1.75.0",
    "httpx>=0.28.1",
    "langchain-openai>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pillow>=12.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
