[project]
name = "agent"
version = "0.1.0"
description = "OpenRHTV - Agent + Human + Infinite Canvas collaborative video creation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "boto3>=1.43.9",
    "deepagents>=0.6.1",
    "google-genai>=1.75.0",
    "httpx>=0.28.1",
    "langchain-openai>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pillow>=12.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "volcengine-python-sdk>=5.0.27",
    "websockets>=16.0",
    "yt-dlp>=2026.3.17",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# W5D3 — 中国大陆构建环境(腾讯云轻量服务器)直连 PyPI / Fastly CDN 不稳,
# 卡在 retry loop 几十分钟。Tsinghua TUNA 是全镜像(含 wheel),且 uv.lock
# 里的 source URL 跟着这里走 — 所以 `uv sync --frozen` 也会从镜像下载。
# `default = true` 把 Tsinghua 设为主索引,PyPI 不再被查询。
# 海外 CI / 开发机不受影响:`uv lock --upgrade` 重新生成时,只要 [[tool.uv.index]]
# 仍是 Tsinghua,lock 就持续指向镜像;切回 PyPI 直连只需删掉这段并 re-lock。
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
